--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     </style>
 </head>
 <body>
-    <!-- Background video (autoplaying, muted, looped). Keep file `background.mp4` next to this HTML. -->
+    <!-- Background video (autoplaying, muted, looped). Keep file `background_1rADpXWf.mp4` next to this HTML. -->
     <video id="bg-video" autoplay muted loop playsinline preload="auto" aria-hidden="true">
-        <source src="background.mp4" type="video/mp4">
+        <source src="background_1rADpXWf.mp4" type="video/mp4">
         <!-- Fallback text left intentionally short for screen readers -->
     </video>
     <div id="clock"></div>
@@ -103,4 +103,5 @@
         })();
     </script>
 </body>
+
 </html>
